<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_nav_bill"
            android:title="@string/title_admin_bill"/>

        <item
            android:id="@+id/admin_nav_complaint"
            android:title="@string/title_admin_complaint"/>

        <item
            android:id="@+id/admin_nav_news"
            android:title="@string/title_admin_news"/>

        <item
            android:id="@+id/admin_nav_residents"
            android:title="@string/title_admin_residents"/>

        <item
            android:id="@+id/admin_nav_review"
            android:title="@string/title_admin_review"/>

        <item
            android:id="@+id/admin_nav_units"
            android:title="@string/title_admin_unit"/>


    </group>
</menu>
