<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_profileU"
            android:textSize="24dp"
            android:paddingLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/profile_name"
            android:text="@string/profile_name"
            android:paddingLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/profile_unit"
            android:text="@string/unit_no"
            android:paddingLeft="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/profile_family"
                android:text="@string/profile_family"
                android:paddingLeft="15dp"
                android:layout_weight="0.7"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/view_family"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/profile_paidBills"
                android:text="@string/profile_paidBills"
                android:paddingLeft="15dp"
                android:layout_weight="0.7"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/view_paidBills" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/editProfile"
            android:layout_gravity="center"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_unit_info"
            android:textSize="24dp"
            android:paddingLeft="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/unit_no"
            android:text="@string/unit_no"
            android:paddingLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/unit_bedrooms"
            android:text="@string/unit_bedrooms"
            android:paddingLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/unit_bathrooms"
            android:text="@string/unit_bathrooms"
            android:paddingLeft="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/unit_parking"
            android:text="@string/unit_parking"
            android:paddingLeft="15dp"/>




    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->



</ScrollView>