<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav"
    app:startDestination="@+id/nav_bills">

    <fragment
        android:id="@+id/nav_bills"
        android:name="com.example.westwoodhomes.admin.ui.bill.BillFragment"
        android:label="@string/title_admin_bill"
        tools:layout="@layout/fragment_bill"/>

    <fragment
        android:id="@+id/nav_complaint"
        android:name="com.example.westwoodhomes.admin.ui.complaint.ComplaintFragment"
        android:label="@string/title_admin_complaint"
        tools:layout="@layout/fragment_complaint"/>

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.westwoodhomes.admin.ui.news.NewsFragment"
        android:label="@string/title_admin_news"
        tools:layout="@layout/fragment_news"/>

    <fragment
        android:id="@+id/nav_residents"
        android:name="com.example.westwoodhomes.admin.ui.residents.ResidentFragment"
        android:label="@string/title_admin_residents"
        tools:layout="@layout/fragment_resident"/>

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.westwoodhomes.admin.ui.review.ReviewFragment"
        android:label="@string/title_admin_review"
        tools:layout="@layout/fragment_review2"/>

    <fragment
        android:id="@+id/nav_units"
        android:name="com.example.westwoodhomes.admin.ui.units.UnitsFragment"
        android:label="@string/title_admin_unit"
        tools:layout="@layout/fragment_units"/>

</navigation>