<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFB8B8"
    tools:context=".admin.ui.units.UnitsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/title_admin_unit" />

        <ListView
            android:id="@+id/lsvUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">


        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/title_admin_add_unit" />

        <EditText
            android:id="@+id/edit_unit_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/unit_no"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <EditText
            android:id="@+id/edit_unit_bedrooms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/unit_bedrooms"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <EditText
            android:id="@+id/edit_unit_bathrooms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/unit_bathrooms"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <EditText
            android:id="@+id/edit_unit_parking"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/unit_parking"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <Button
            android:id="@+id/btnAddUnit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#0E8EE3"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            tools:text="Add Unit" />


    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


</ScrollView>