<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFB8B8"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:text="@string/title_westwood"
            android:textColor="#100B0B"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNews"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="15dp"
                android:text="@string/news"
                android:textColor="#070505"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvNews"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/colorText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:text="@string/upcoming_bills"
            android:textColor="#0C0808"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tvRent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:paddingLeft="15dp"
            android:text="@string/bills_rent"
            android:textColor="#0B0606" />

        <TextView
            android:id="@+id/tvUtil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:paddingLeft="15dp"
            android:text="@string/bills_utility"
            android:textColor="#070505" />

        <TextView
            android:id="@+id/tvNet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:paddingLeft="15dp"
            android:text="@string/bills_internet"
            android:textColor="#070505" />


    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->

</ScrollView>