<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.review.ReviewFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_writeReview"
            android:textSize="24dp"
            android:paddingLeft="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:layout_weight="0.3"
                android:paddingLeft="15dp"
                />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="0.7"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUnitNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/unit_no"
                android:layout_weight="0.3"
                android:paddingLeft="15dp"/>

            <EditText
                android:id="@+id/edtUnitNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="0.7"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rating"
                android:layout_weight="0.3"
                android:paddingLeft="15dp"/>

            <EditText
                android:id="@+id/edtRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_weight="0.7" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtReview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/write_review"
            android:paddingLeft="15dp"/>

        <EditText
            android:id="@+id/edtReview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit_review"
            ></Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/colorText"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_writeComplaint"
            android:textSize="24dp"
            android:paddingLeft="15dp"/>

        <EditText
            android:id="@+id/edtComplaint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit_complaint"
            ></Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/colorText"
            />
    </LinearLayout>






</ScrollView>